Fixing menu on IE

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,7 +61,7 @@ body{
 #main_inner{
 	background: url('/images/bg2.png') repeat-x;
 	width: 100%;
-	height:190px;
+	min-height:190px;
 }
 
 .container{
@@ -80,12 +80,18 @@ ul#menu_top{
 	position: relative;
 	top: 30px;
 	right: 50px;
+  float: right;
+}
+
+#menu_top li {
+  display: inline;
 }
 
 ul#menu_top li a{
-	float: right;
 	color:#da3546;
 	font-weight: bold;
+  display:block;
+  float: left;
 	margin-right: 25px;
 	text-decoration: none;
 }
@@ -280,6 +286,7 @@ ul#menu_top li a:hover{
 
 .auth_icon {
   display: block;
+  float:left;
   width: 32px;
   height: 32px;
   text-indent: -9999px;
